# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html
.github/workflows/: pyci.yml
page_loader/: cli.py  page_loader.py
page_loader/scripts/: main.py
tests/: test_page_loader.py
tests/fixtures/: hexlet.html  test_css.css  test_page.html
