[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Third python project on hexlet"
authors = ["Ilya Dutlov <id@dutlov.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
