[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Third python project on hexlet"
authors = ["Ilya Dutlov <id@dutlov.ru>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
